# kafka-pub-sub-demo

./: .gitignore  docker-compose.yml  readme.md
python-producer/: Dockerfile  pyproject.toml
python-producer/src/: main.py
rust-consumer/: Dockerfile  cargo.toml
rust-consumer/src/: main.rs
